--- a/win/VC120/game.vcxproj
+++ b/win/VC120/game.vcxproj
@@ -441,11 +441,14 @@
     <ClCompile Include="..\..\src\game\LuaEngine\BattleGroundHooks.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\CreatureHooks.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\ElunaEventMgr.cpp" />
+    <ClCompile Include="..\..\src\game\LuaEngine\ElunaInstanceAI.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\ElunaUtility.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\GameObjectHooks.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\GroupHooks.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\GuildHooks.cpp" />
+    <ClCompile Include="..\..\src\game\LuaEngine\InstanceHooks.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\ItemHooks.cpp" />
+    <ClCompile Include="..\..\src\game\LuaEngine\lmarshal.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\LuaEngine.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\LuaFunctions.cpp" />
     <ClCompile Include="..\..\src\game\LuaEngine\PlayerHooks.cpp" />
@@ -608,6 +611,7 @@
     <ClInclude Include="..\..\src\game\LuaEngine\ElunaCreatureAI.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\ElunaEventMgr.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\ElunaIncludes.h" />
+    <ClInclude Include="..\..\src\game\LuaEngine\ElunaInstanceAI.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\ElunaQueryMethods.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\ElunaTemplate.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\ElunaUtility.h" />
@@ -618,6 +622,7 @@
     <ClInclude Include="..\..\src\game\LuaEngine\HookHelpers.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\Hooks.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\ItemMethods.h" />
+    <ClInclude Include="..\..\src\game\LuaEngine\lmarshal.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\LuaEngine.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\MapMethods.h" />
     <ClInclude Include="..\..\src\game\LuaEngine\ObjectMethods.h" />
