--- a/win/VC120/game.vcxproj.filters
+++ b/win/VC120/game.vcxproj.filters
@@ -523,6 +523,15 @@
     <ClCompile Include="..\..\src\game\LuaEngine\ServerHooks.cpp">
       <Filter>LuaEngine\Hooks</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\game\LuaEngine\ElunaInstanceAI.cpp">
+      <Filter>LuaEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\game\LuaEngine\lmarshal.cpp">
+      <Filter>LuaEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\game\LuaEngine\InstanceHooks.cpp">
+      <Filter>LuaEngine\Hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\game\AccountMgr.h">
@@ -1044,6 +1053,12 @@
     </ClInclude>
     <ClInclude Include="..\..\src\game\LuaEngine\WorldPacketMethods.h">
       <Filter>LuaEngine\Methods</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\game\LuaEngine\ElunaInstanceAI.h">
+      <Filter>LuaEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\game\LuaEngine\lmarshal.h">
+      <Filter>LuaEngine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
